syntax = "proto3";

package proto;
option go_package = "./;proto";

message CommonMessage {
  uint32 msg_id = 1;
  bytes data = 2;
}
